tests/compile-pass/for_array_basic.lm
fn main() {
  let arr: [I32; 4] = [1, 2, 3, 4];
  let mut sum: I32 = 0;

  for x in arr {
    sum = sum + x;
  }

  let _ = sum;
}
