tests/compile-fail/let_refutable_pat.lm
enum Maybe[T] { Some(T), None }

fn main() {
  let m: Maybe[I32] = Some(1);
  let Some(x) = m;
  let _ = x;
}
